--- a/vercel.json
+++ b/vercel.json
@@ -4,7 +4,7 @@
   "buildCommand": "npm run build",
   "outputDirectory": "dist",
   "functions": {
-    "api/**/*.{js,ts}": {
+    "api/*.{js,ts}": {
       "runtime": "nodejs20.x"
     }
   },
