--- a/vercel.json
+++ b/vercel.json
@@ -4,8 +4,8 @@
   "buildCommand": "npm run build",
   "outputDirectory": "dist",
   "functions": {
-    "api/*.{js,ts}": {
-      "runtime": "nodejs20.x"
+    "api/*.ts": {
+      "runtime": "vercel/node@20.x"
     }
   },
   "rewrites": [
