--- a/.env.example
+++ b/.env.example
@@ -4,3 +4,11 @@ VITE_SUPABASE_ANON_KEY=
 # Used only by the serverless function at api/gemini.ts (not exposed to the client)
 GEMINI_API_KEY=
 
+# Sprinklr API (server-side only)
+SPRINKLR_CLIENT_ID=
+SPRINKLR_CLIENT_SECRET=
+SPRINKLR_BASE_URL=https://api.sprinklr.com
+# Provide full endpoint for your tenant/package, e.g., https://api.sprinklr.com/v1/posts
+SPRINKLR_POSTS_ENDPOINT=
+# Optional default CSV filter limiting to your unit's accounts, e.g., acc_123,acc_456
+SPRINKLR_ALLOWED_ACCOUNT_IDS=
