sprinllr api update with supabase

--- a/.env.example
+++ b/.env.example
@@ -8,7 +8,13 @@ GEMINI_API_KEY=
 SPRINKLR_CLIENT_ID=
 SPRINKLR_CLIENT_SECRET=
 SPRINKLR_BASE_URL=https://api.sprinklr.com
+# Optional: override OAuth token endpoint if different from base URL
+SPRINKLR_TOKEN_ENDPOINT=
 # Provide full endpoint for your tenant/package, e.g., https://api.sprinklr.com/v1/posts
 SPRINKLR_POSTS_ENDPOINT=
 # Optional default CSV filter limiting to your unit's accounts, e.g., acc_123,acc_456
 SPRINKLR_ALLOWED_ACCOUNT_IDS=
+# Optional: if your posts endpoint expects a different param than `accounts`, e.g., `profileIds`
+SPRINKLR_ACCOUNTS_PARAM=
+# Optional: network hint if your endpoint requires it, e.g., facebook
+SPRINKLR_NETWORK=
