--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "rss-parser": "^3.13.0",
     "@google/genai": "^1.22.0",
     "@google/generative-ai": "^0.21.0",
     "@supabase/supabase-js": "^2.45.0",
