--- a/.env.example
+++ b/.env.example
@@ -18,3 +18,27 @@ SPRINKLR_ALLOWED_ACCOUNT_IDS=
 SPRINKLR_ACCOUNTS_PARAM=
 # Optional: network hint if your endpoint requires it, e.g., facebook
 SPRINKLR_NETWORK=
+
+# Social API fetching (server-side only)
+# Facebook (Page)
+FACEBOOK_PAGE_ID=
+FACEBOOK_ACCESS_TOKEN=
+
+# X / Twitter (User)
+TWITTER_USERNAME=
+TWITTER_BEARER_TOKEN=
+
+# Instagram Graph API (Business/Creator account linked to FB Page)
+INSTAGRAM_USER_ID=
+INSTAGRAM_ACCESS_TOKEN=
+
+# LinkedIn (Organization shares)
+LINKEDIN_ORG_ID=
+LINKEDIN_ACCESS_TOKEN=
+
+# YouTube
+YOUTUBE_CHANNEL_ID=
+YOUTUBE_API_KEY=
+
+# Custom JSON feed fallback
+CUSTOM_JSON_FEED_URL=
