Big push for rss feeder thing from claude

--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,9 @@
 VITE_SUPABASE_URL=
 VITE_SUPABASE_ANON_KEY=
+VITE_SOCIAL_OAUTH_REDIRECT_URI=
+VITE_GOOGLE_CLIENT_ID=
+VITE_FACEBOOK_APP_ID=
+VITE_LINKEDIN_CLIENT_ID=
 
 # Used only by the serverless function at api/gemini.ts (not exposed to the client)
 GEMINI_API_KEY=
@@ -18,6 +22,15 @@ SPRINKLR_ALLOWED_ACCOUNT_IDS=
 SPRINKLR_ACCOUNTS_PARAM=
 # Optional: network hint if your endpoint requires it, e.g., facebook
 SPRINKLR_NETWORK=
+# Optional: how to send OAuth credentials: "body" (default), "basic", or "both"
+SPRINKLR_OAUTH_AUTH_STYLE=
+# Optional: override OAuth grant type (default client_credentials)
+SPRINKLR_OAUTH_GRANT_TYPE=
+# Optional scope or audience parameters required by your Sprinklr app
+SPRINKLR_OAUTH_SCOPE=
+SPRINKLR_OAUTH_AUDIENCE=
+# Optional extra OAuth params (JSON or querystring, e.g., {"environment":"prod"})
+SPRINKLR_OAUTH_EXTRA_PARAMS=
 
 # Social API fetching (server-side only)
 # Facebook (Page)
